# LearningHaskell

./: .gitignore  README.md
src/01_Getting_Started/: README.md  kminima.hs  mydrop.hs  wc.hs
src/02_TypesNFunctions/: README.md  about_local_variables.hs  functions.hs
src/03_Types_StreamliningFunctions/: Bookstore.hs  Guard.hs  List.cpp  ListADT.hs  LocalFunction.hs  answers03.hs  simple_errorhandling.hs
src/04_FPinHaskell/: ADT.hs  CLI.hs  InteractWith.hs  README.md  adler32.hs  dlts.hs  fixlines.hs  folding.hs  reverse.hs  spaceLeaks.hs
src/05_2JSONInHaskell/: Prettify.hs  PrettyJSON.hs  Setup.hs
src/05_JSONInHaskell/: PutJSON.hs  Rayson.hs  SimpleJSON.hs  SimpleJSON2.hs  UseRayson.hs
src/06_2Typeclasses/: 02Automatic_Derivation.hs  03useful_language_extensions.hs  README.md
src/06_Typeclasses/: JSONClass.hs  Monomorphism.hs  Overlap.hs  README.md  eqclasses.hs  newtype.hs  overlapping_instances.hs  simple_typeclass.hs
src/07_2IO/: README.md  tempfile.hs
src/07_IO/: README.md  actions.hs  basic_io.hs  basicio_with_nodoblock.hs  do_io_via_interact.hs  input.txt  io_from_pureio.hs  io_in_lazyeval.hs  tempfile.hs  test_input.txt  toupper-lazy2.hs
src/08_FileProcessing/: HighestClose.hs  README.md  SumFile.hs  data.csv  elfdetecter.hs  (+1 more)
src/HaskellInDepth/effect_handlers_in_scope/: CHANGELOG.md  effect-handlers-in-scope.cabal
src/HaskellInDepth/effect_handlers_in_scope/lib/: EffectHandler.hs  Prog.hs
src/HaskellInDepth/effect_handlers_in_scope/scratchpad/: DataALarteCarte.hs  ScratchPad.hs
src/HaskellInDepth/effect_handlers_in_scope/src/: Main.hs
(+684 files in other folders)
